# acomm

./: .gitignore  Cargo.toml  MILESTONE.md  README.md  TODO.md
docs/ADR/: 001-core-architecture-and-tech-stack.md  002-preflight-routing-and-metadata-strategy.md  003-terminal-equivalence-and-interactive-ui.md  004-cli-wrapper-orchestration-and-tui-dashboard.md  005-typescript-ink-tui-and-bridge-architecture.md  README.md
src/: bridge.rs  discord.rs  main.rs  ntfy.rs  protocol.rs  slack.rs  tui.rs
tui/: package-lock.json  package.json  tsconfig.json
tui/src/: App.tsx  MultilineInput.tsx  SelectionMenu.tsx  SessionBrowser.tsx  SlashAutocomplete.tsx  VirtualizedMessageList.tsx  bridge.ts  index.tsx  inputKeyHelpers.ts  protocol.ts  renderMarkdown.ts  sessionStorage.ts  slashCommands.ts  startupProviderSync.ts  textHelpers.ts
tui/src/__tests__/: bridge.test.ts  inputKeyHelpers.test.ts  multilineInput.test.ts  protocol.test.ts  renderMarkdown.test.ts  sessionStorage.test.ts  slashCommands.test.ts  startupProviderSync.test.ts  virtualizedMessageList.test.tsx
