[package]
name = "acomm"
version = "0.0.1"
edition = "2024"

[dependencies]
acore = { version = "0.1.0", path = "../acore" }
chrono = "0.4.43"
clap = { version = "4.5.60", features = ["derive"] }
crossterm = "0.29.0"
futures-core = "0.3.32"
futures-util = "0.3.32"
ratatui = "0.30.0"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.49.0", features = ["full"] }
tokio-stream = "0.1.18"
tokio-tungstenite = { version = "0.28.0", features = ["rustls-tls-webpki-roots"] }
unicode-segmentation = "1.12.0"
unicode-width = "0.2.2"
