[package]
name = "acomm"
version = "0.0.1"
edition = "2024"

[dependencies]
acore = { version = "0.1.0", path = "../acore" }
chrono = "0.4"
clap = { version = "4.5", features = ["derive"] }
crossterm = "0.29"
dirs = "6.0"
futures-core = "0.3"
futures-util = "0.3"
ratatui = "0.30"
reqwest = { version = "0.13", features = ["json", "stream"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
tokio-stream = "0.1"
tokio-tungstenite = { version = "0.28", features = ["rustls-tls-webpki-roots"] }
unicode-segmentation = "1.12"
unicode-width = "0.2"
